First controller and Razor pages tests

--- a/SalesWebMvc2/Views/Home/About.cshtml
+++ b/SalesWebMvc2/Views/Home/About.cshtml
@@ -4,11 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>@ViewData["Professor"]</p>
-
-
-<p>Welcome to the new course of C#</p>
+<p>Professor @ViewData["Professor"]</p>
 
 <adress>
-    <a href="www.eudandoweb.com.br">EducaWeb</a>
+    <strong>More information: </strong> <a href="www.eudandoweb.com.br">EducaWeb.com.br</a>
 </adress>
