Foreign key not null (referential integrity)

--- a/SalesWebMvc2/Views/Sellers/Delete.cshtml
+++ b/SalesWebMvc2/Views/Sellers/Delete.cshtml
@@ -1,1 +1,46 @@
-﻿
+﻿@model SalesWebMvc2.Models.Seller
+
+
+@{
+    ViewData["Title"] = "Delete";
+}
+
+<h2>@ViewData["Title"]</h2>
+
+<h4>Seller</h4>
+<p>Are you sure that you want delete this seller?</p>
+<hr />
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BirthDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BaseSalary)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                @Html.DisplayFor(model => model.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.BirthDate)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.BaseSalary)
+            </td>
+        </tr>
+    </tbody>
+</table>
