--- a/SalesWebMvc2/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc2/Views/Sellers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SalesWebMvc2.Models.Seller
+﻿@model SalesWebMvc2.Models.ViewModels.SellerFormViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -8,8 +8,31 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
-            <label class="form-group" 
+        <form asp-action="Edit">
+            <input type="hidden" asp-for="Seller.Id" />
+            <div class="form-group">
+                <label asp-for="Seller.Name" class="control-label"></label>
+                <input asp-for="Seller.Name" class="form-control"  />
+            </div>
+            <div class="form-group">
+                <label asp-for="Seller.Email" class="control-label"></label>
+                <input asp-for="Seller.Email" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Seller.BirthDate" class="control-label"></label>
+                <input asp-for="Seller.BirthDate" class="form-control"  />
+            </div>
+            <div class="form-group">
+                <label asp-for="Seller.BaseSalary" class="control-label"></label>
+                <input asp-for="Seller.BaseSalary" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Seller.DepartmentId" class="control-label"></label>
+                <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments, "Id", "Name"))" class="form-control"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
         </form>
     </div>
 </div>
